experiments renderer partially implemented, and strategy concept included